--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,15 @@ env_logger = "0.10"
 lazy_static = { version = "1.4", optional = true }
 crc32fast = "1.3"
 
+# Safe POSIX syscall wrappers - replaces manual libc calls  
+nix = { version = "0.27", features = ["fs", "mman", "poll", "event"] }
+
+# Async event-driven I/O - replaces manual poll loops
+mio = { version = "0.8", features = ["os-poll", "net", "os-ext"] }
+
+# Official FlatBuffers implementation
+flatbuffers = "23.5"
+
 # For atomic operations and lock-free data structures
 crossbeam = "0.8"
 parking_lot = "0.12"
@@ -45,6 +54,10 @@ clap = { version = "4.0", optional = true }
 
 # Optional: for advanced memory management
 mimalloc = { version = "0.1", optional = true }
+
+[build-dependencies]
+# C++ header generation for ROS2 interop
+cbindgen = "0.24"
 
 [dev-dependencies]
 criterion = "0.5"
